--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "use-howler",
   "version": "1.0.0",
-  "description": "Made with create-react-library",
-  "author": "",
+  "description": "Howler React hook",
+  "author": "Brice Colucci <brice.colucci@gmail.com>",
   "license": "MIT",
   "repository": "/use-howler",
   "main": "dist/index.js",
@@ -13,15 +13,7 @@
   },
   "scripts": {
     "build": "microbundle-crl --no-compress --format modern,cjs",
-    "start": "microbundle-crl watch --no-compress --format modern,cjs",
-    "prepare": "run-s build",
-    "test": "run-s test:unit test:lint test:build",
-    "test:build": "run-s build",
-    "test:lint": "eslint .",
-    "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
-    "test:watch": "react-scripts test --env=jsdom",
-    "predeploy": "cd example && npm install && npm run build",
-    "deploy": "gh-pages -d example/build"
+    "start": "microbundle-crl watch --no-compress --format modern,cjs"
   },
   "peerDependencies": {
     "react": "^16.0.0"
@@ -31,7 +23,6 @@
   },
   "devDependencies": {
     "@types/howler": "^2.2.4",
-    "@types/jest": "^25.1.4",
     "@types/node": "^12.12.38",
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.7",
@@ -49,7 +40,6 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-standard": "^4.0.1",
-    "gh-pages": "^2.2.0",
     "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
